--- a/src/Core/ClientExplorer.Shared.ViewModels/ClientExplorer.Shared.ViewModels.csproj
+++ b/src/Core/ClientExplorer.Shared.ViewModels/ClientExplorer.Shared.ViewModels.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClientExplorer.Application\ClientExplorer.Application.csproj" />
+  </ItemGroup>
+
 </Project>
