--- a/src/Core/ClientExplorer.Shared.ViewModels/ClientExplorer.Shared.ViewModels.csproj
+++ b/src/Core/ClientExplorer.Shared.ViewModels/ClientExplorer.Shared.ViewModels.csproj
@@ -14,4 +14,13 @@
     <ProjectReference Include="..\ClientExplorer.Application\ClientExplorer.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Avalonia.Base">
+      <HintPath>..\..\..\..\..\..\..\..\home\kuricyn\.nuget\packages\avalonia\0.10.18\lib\netcoreapp2.0\Avalonia.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="Avalonia.Visuals">
+      <HintPath>..\..\..\..\..\..\..\..\home\kuricyn\.nuget\packages\avalonia\0.10.18\lib\netcoreapp2.0\Avalonia.Visuals.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
