--- a/src/AvaloniaUI/ClientExplorer.AvaloniaUI/ClientExplorer.AvaloniaUI.csproj
+++ b/src/AvaloniaUI/ClientExplorer.AvaloniaUI/ClientExplorer.AvaloniaUI.csproj
@@ -54,6 +54,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include=".ClientExplorer.Assets\.AddressLocations.json" />
+    <Content Include=".ClientExplorer\Assets\AddressLocations.json" />
   </ItemGroup>
 </Project>
