Start of development. Taking out the application settings to a file. Начало разработки. Вынос настроек приложения в файл.

--- a/src/AvaloniaUI/ClientExplorer.AvaloniaUI/ClientExplorer.AvaloniaUI.csproj
+++ b/src/AvaloniaUI/ClientExplorer.AvaloniaUI/ClientExplorer.AvaloniaUI.csproj
@@ -55,5 +55,9 @@
 
   <ItemGroup>
     <Content Include=".ClientExplorer\Assets\AddressLocations.json" />
+    <None Remove="Assets\Setting.json" />
+    <Content Include="Assets\Settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
