Taking out the application settings to a file. Done. Вынос настроек приложения в файл. Выполнен.

--- a/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Assets/Settings.json
+++ b/src/AvaloniaUI/ClientExplorer.AvaloniaUI/Assets/Settings.json
@@ -1,7 +1,8 @@
 {
   "CurrentPath": "/mnt/share/Clients",
-  "DataResourcePathName": ".ClientExplorer",
-  "AssetsPathName": "Assets",
+  "OnClientPathDataResourceAppFolderName": ".ClientExplorer",
+  "OnClientPathAssetsFolderName": "Assets",
   "AddressLocationsSourceFileName": "AddressLocations.json",
-  "FolderObjectsName": "Объекты"
+  "FolderObjectsEntityName": "Объекты",
+  "ClientLogoFileName": ".logo.png"  
 }
