--- a/src/Core/ClientExplorer.Shared.ViewModels/ClientExplorer.Shared.ViewModels.csproj
+++ b/src/Core/ClientExplorer.Shared.ViewModels/ClientExplorer.Shared.ViewModels.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile>bin\Release\net6.0\ClientExplorer.Shared.ViewModels.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\ClientExplorer.Application\ClientExplorer.Application.csproj" />
   </ItemGroup>
