--- a/src/Core/ClientExplorer.Application/ClientExplorer.Application.csproj
+++ b/src/Core/ClientExplorer.Application/ClientExplorer.Application.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>ClientExplorer.Application</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile>bin\Release\net6.0\ClientExplorer.Application.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
